--- a/templates/passwords-quiz.html
+++ b/templates/passwords-quiz.html
@@ -34,6 +34,7 @@
                 <a class="nav-item nav-link" href="{{ url_for('social_eng') }}"> Social Engineering </a>
                 <a class="nav-item nav-link" href="{{ url_for('browser') }}"> Browser Security </a>
                 <a class="nav-item nav-link" href="{{ url_for('mobile') }}"> Mobile Security </a>
+                <a class="nav-item nav-link" href="{{ url_for('malware') }}"> Malware Security </a>
             </div>
         </nav>
     </header>
@@ -106,7 +107,8 @@
                     </div>
 
                     <div class="card card-block no-border" style="text-align: center;">
-                        <a class="next"></a>
+                        <a class="btn btn-primary btn-lg next" href="/passwords" role="button"> Back to the module! </a>
+                        <a id="p" class="btn btn-primary btn-lg next disabled" href="/" role="button" onclick="checkQuestion(this)"> Start a new module! </a>
                     </div>
                 </div>
             </div>
