--- a/templates/passwords.html
+++ b/templates/passwords.html
@@ -35,6 +35,7 @@
                 <a class="nav-item nav-link" href="{{ url_for('social_eng') }}"> Social Engineering </a>
                 <a class="nav-item nav-link" href="{{ url_for('browser') }}"> Browser Security </a>
                 <a class="nav-item nav-link" href="{{ url_for('mobile_quiz') }}"> Mobile Security </a>
+                <a class="nav-item nav-link" href="{{ url_for('malware') }}"> Malware Security </a>
             </div>
         </nav>
     </header>
@@ -55,7 +56,7 @@
             <div class="jumbotron jumbotron-fluid col-md-12">
                 <div class="container">
                     <h1 class="display-3"> Passwords </h1>
-                    <h4 class="lead"> Learn about what makes a strong password and the danger of using default passwords. </h4>
+                    <!--<h4 class="lead"> Learn about what makes a strong password and the danger of using default passwords. </h4>-->
                 </div>
             </div>
         </div>
@@ -125,9 +126,6 @@
 
                         <div class="card card-block">
                             <h4 id="exercise" class="card-title"> Password Cracking Simulation </h4>
-
-
-
                             <p>
                                 This exercise can show you how fast passwords can be cracked.
                             </p>
@@ -135,6 +133,7 @@
                             <p class="card card-block card-instruction"> Enter passwords in the form below to see how quickly they could be guessed using dictionary and brute force attacks. Notice how passwords with stronger characteristics take longer to crack.</p>
 
                             <p>
+                                Test your password:
                                 <input name="passwordTxt" type="text" maxlength="512" id="passwordTxt" class="searchField" oninput="searchDict();guessPassword();" placeholder="Password">
                             </p>
 
@@ -226,7 +225,7 @@
                                 <li> Attackers can easily obtain default passwords and identify internet-connected target systems. </li>
                             </ul>
 
-                            <p class="card card-block card-instruction">Visit this website to see the default passwords for many devices: &nbsp;<a href="http://www.defaultpassword.com/">http://www.defaultpassword.com/</a></p>
+                            <p>Visit this website to see the default passwords for many devices: &nbsp;<a href="http://www.defaultpassword.com/">http://www.defaultpassword.com/</a></p>
 
                             <p class="card card-block card-instruction">Watch the video below to see how default passwords can be used against you.</p>
 
