--- a/templates/browser.html
+++ b/templates/browser.html
@@ -20,6 +20,7 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
 </head>
 
 <body data-spy="scroll" data-target="#sidebar">
@@ -35,6 +36,7 @@
                 <a class="nav-item nav-link" href="{{ url_for('social_eng') }}"> Social Engineering </a>
                 <a class="nav-item nav-link active" href="{{ url_for('browser') }}"> Browser Security </a>
                 <a class="nav-item nav-link" href="{{ url_for('mobile') }}"> Mobile Security </a>
+                <a class="nav-item nav-link" href="{{ url_for('malware') }}"> Malware Security </a>
             </div>
         </nav>
     </header>
@@ -54,7 +56,8 @@
             <div class="jumbotron jumbotron-fluid col-md-12">
                 <div class="container">
                     <h1 class="display-3"> Browser Security </h1>
-                    <h4 class="lead"> Introduction or description of the module for people to read before they actually do it. </h4> </div>
+                    <!--<h4 class="lead"> Introduction or description of the module for people to read before they actually do it. </h4> </div>-->
+                </div>
             </div>
         </div>
         <div class="row">
@@ -77,7 +80,7 @@
                     </div>
 
                     <div id="content" class="col-md-10">
-                        <p class="card card-block card-instruction"> Instructions will look like this. </p>
+                        
 
                         <div class="card card-block">
                             <h3 id="cookies" class="card-title"> Cookies </h3>
@@ -107,6 +110,31 @@
                                 <li> You can configure your browser settings to allow cookies only from sites you trust and disable from sites you don't. </li>
                             </ul>
                         </div>
+
+
+                        <p class="card card-block card-instruction">Select your favorite browser, then click on the images below to go through the steps of managing cookies.</p>
+
+                        <div class="card text-xs-center">
+                            <ul class="nav nav-tabs" role="tablist">
+                                <li class="nav-item"> <a style="background-color:#abb1b6" class="nav-link active" data-toggle="tab" href="#chrome-cookies" role="tab">Chrome</a> </li>
+                                <li class="nav-item"> <a style="background-color:#BFBFBF" class="nav-link" data-toggle="tab" href="#firefox-cookies" role="tab">Firefox</a> </li>
+                                <li class="nav-item"> <a style="background-color:#d6dee4" class="nav-link" data-toggle="tab" href="#ie-cookies" role="tab">Internet Explorer</a> </li>
+                            </ul>
+                            <!-- Tab panes -->
+                            <div class="tab-content">
+                                <div class="tab-pane active" id="chrome-cookies" role="tabpanel">
+                                    <img class="p-x-1" id="chrome-cookies-img" src="static/images/cookies-chrome/step1.png" onclick="changeSrc(this)">
+                                </div>
+                                <div class="tab-pane" id="firefox-cookies" role="tabpanel">
+                                    <img class="p-x-1" id="firefox-cookies-img" src="static/images/cookies-firefox/step1.png" onclick="changeSrc(this)">
+                                </div>
+                                <div class="tab-pane" id="ie-cookies" role="tabpanel">
+                                    <img class="p-x-1" id="ie-cookies-img" src="static/images/cookies-ie/step1.png" onclick="changeSrc(this)">
+                                </div>
+                            </div>
+                        </div>
+
+
                         <div class="card card-block">
                             <h4 id="plugins" class="card-title"> Plug-Ins </h4>
                             <hr>
@@ -127,9 +155,9 @@
 
                             <div class="card text-xs-center">
                                 <ul class="nav nav-tabs" role="tablist">
-                                    <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#chrome-plugins" role="tab">Chrome</a> </li>
-                                    <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#firefox-plugins" role="tab">Firefox</a> </li>
-                                    <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#ie-plugins" role="tab">Internet Explorer</a> </li>
+                                    <li class="nav-item"> <a style="background-color:#abb1b6" class="nav-link active" data-toggle="tab" href="#chrome-plugins" role="tab">Chrome</a> </li>
+                                    <li class="nav-item"> <a style="background-color:#BFBFBF" class="nav-link" data-toggle="tab" href="#firefox-plugins" role="tab">Firefox</a> </li>
+                                    <li class="nav-item"> <a style="background-color:#d6dee4" class="nav-link" data-toggle="tab" href="#ie-plugins" role="tab">Internet Explorer</a> </li>
                                 </ul>
                                 <!-- Tab panes -->
                                 <div class="tab-content">
@@ -165,9 +193,9 @@
                             <p class="card card-block card-instruction">Select your favorite browser, then click on the images below to go through the steps of disabling pop-ups.</p>
                             <div class="card text-xs-center">
                                 <ul class="nav nav-tabs" role="tablist">
-                                    <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#chrome-popups" role="tab">Chrome</a> </li>
-                                    <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#firefox-popups" role="tab">Firefox</a> </li>
-                                    <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#ie-popups" role="tab">Internet Explorer</a> </li>
+                                    <li class="nav-item"> <a style="background-color:#abb1b6" class="nav-link active" data-toggle="tab" href="#chrome-popups" role="tab">Chrome</a> </li>
+                                    <li class="nav-item"> <a style="background-color:#BFBFBF" class="nav-link" data-toggle="tab" href="#firefox-popups" role="tab">Firefox</a> </li>
+                                    <li class="nav-item"> <a style="background-color:#d6dee4" class="nav-link" data-toggle="tab" href="#ie-popups" role="tab">Internet Explorer</a> </li>
                                 </ul>
                                 <!-- Tab panes -->
                                 <div class="tab-content">
@@ -203,6 +231,7 @@
             </div>
         </div>
     </div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="static/js/csam.js"></script>
     <script src="static/js/passwordCracker.js"></script>
@@ -227,6 +256,7 @@
             });
         });
     </script>
+
 </body>
 
 </html>
