--- a/templates/mobile.html
+++ b/templates/mobile.html
@@ -35,6 +35,7 @@
                 <a class="nav-item nav-link" href="{{ url_for('social_eng') }}"> Social Engineering </a>
                 <a class="nav-item nav-link" href="{{ url_for('browser') }}"> Browser Security </a>
                 <a class="nav-item nav-link active" href="{{ url_for('mobile') }}"> Mobile Security </a>
+                <a class="nav-item nav-link" href="{{ url_for('malware') }}"> Malware Security </a>
             </div>
         </nav>
     </header>
@@ -54,7 +55,7 @@
             <div class="jumbotron jumbotron-fluid col-md-12">
                 <div class="container">
                     <h1 class="display-3"> Mobile Security </h1>
-                    <h4 class="lead"> Introduction or description of the module for people to read before they actually do it. </h4>
+                    <!--<h4 class="lead"> Introduction or description of the module for people to read before they actually do it. </h4> -->
                 </div>
             </div>
         </div>
@@ -111,7 +112,7 @@
 
                             <div id="pw-video" class="embed-responsive embed-responsive-16by9 m-y-2">
                                 <p> Here is one incident that highlights the potential risks of using default passwords. </p>
-                                <iframe align="middle" class="embed-responsive-item" src="//www.youtube.com/embed/KCObM4PBTVk" allowfullscreen></iframe>
+                                <iframe align="middle" class="embed-responsive-item" src="//www.youtube.com/embed/KCObM4PBTVk?end=160" allowfullscreen></iframe>
                             </div>
                         </div>
                         <div id="permissions" class="card card-block">
